--- a/capa.css
+++ b/capa.css
@@ -7,7 +7,7 @@ header{
     width: 100%;
     height: 50px;
     background-color: rgb(255, 255, 255);
-    border-bottom: ;
+    border-bottom: 1px solid black;
 }
 main{
     width: 100%;
@@ -18,6 +18,7 @@ footer{
     width: 100%;
     height: 40px;
     background-color: black;
+    border-top: 1px solid black;
 }
 .logo{
     width: 50px;
