--- a/capa.css
+++ b/capa.css
@@ -11,14 +11,13 @@ header{
 }
 main{
     width: 100%;
-    height: 503px;
-    background-color: grey;
+    height: 502px;
+    background-color: rgb(255, 255, 255);
 }
 footer{
     width: 100%;
     height: 40px;
     background-color: black;
-    border-top: 1px solid black;
 }
 .logo{
     width: 50px;
@@ -30,5 +29,6 @@ footer{
     display: block;
     float: left;
     position: relative;
-    left: 50%;
+    left: 639px;
+    border-left: 1px solid black;
 }
