--- a/capa.css
+++ b/capa.css
@@ -11,16 +11,18 @@ header{
 }
 main{
     width: 100%;
-    height: 502px;
+    height: 501px;
     background-color: rgb(255, 255, 255);
 }
 footer{
     width: 100%;
     height: 40px;
-    background-color: black;
+    background-color: #233219;
+    border-top: 1px solid black;
 }
 .logo{
     width: 50px;
+    height: 40px;
     position: relative;
     left: 612px;
     top: 1px;
@@ -32,3 +34,196 @@ footer{
     left: 639px;
     border-left: 1px solid black;
 }
+.titulo{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  position: relative;
+  left: -604px;
+  font-size: 93px;
+  top: 110px;
+  color: rgb(0, 0, 0);
+}
+h2{
+    position: relative;
+    left: -600px;
+    font-size: 18px;
+    top: 97px;
+}
+
+p{
+    color: white;
+    font-family:'Times New Roman', Times, serif;
+    display: block;
+    float: left;
+}
+.button{
+    background-color: rgb(202, 202, 202);
+    padding: 1rem 2rem;
+    border-radius: 20px;
+    border: 1px solid white;
+    cursor: pointer;
+    letter-spacing: .2rem;
+    position: relative;
+    left: -600px;
+    top: 106px;
+    transition: all 0.5s ease;
+}
+.button:hover{
+    background-color: #393f26;
+    color: white;
+    transform: scale(1.05);
+}
+a{
+    text-decoration: none;
+}
+.git{
+    height: 25px;
+    position: relative;
+    top: 7px;
+    left: -818px;
+}
+.gitM{
+    height: 25px;
+    position: relative;
+    top: 7px;
+    left: -524px;
+}
+.gitB{
+    height: 25px;
+    position: relative;
+    top: 7px;
+    left: -203px;
+}
+
+
+
+
+
+
+#ana{
+    padding-left: 20%;
+    padding-top: 1%;
+}
+#madu{
+    padding-left: 20%;
+    padding-top: 1%;
+}
+#bella{
+    padding-left: 20%;
+    padding-top: 1%;
+}
+
+
+
+
+.mate-sc-regular {
+    font-family: "Mate SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .dm-serif-display-regular {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .dm-serif-display-regular-italic {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  .euphoria-script-regular {
+    font-family: "Euphoria Script", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .mate-sc-regular {
+    font-family: "Mate SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+
+  .cormorant-infant-light {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .cormorant-infant-regular {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .cormorant-infant-medium {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .cormorant-infant-semibold {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .cormorant-infant-bold {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .cormorant-infant-light-italic {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .cormorant-infant-regular-italic {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .cormorant-infant-medium-italic {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .cormorant-infant-semibold-italic {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 600;
+    font-style: italic;
+  }
+  
+  .cormorant-infant-bold-italic {
+    font-family: "Cormorant Infant", serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .mate-sc-regular {
+    font-family: "Mate SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .euphoria-script-regular {
+    font-family: "Euphoria Script", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .dm-serif-display-regular {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .dm-serif-display-regular-italic {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+
+
