--- a/experimenteM.css
+++ b/experimenteM.css
@@ -5,7 +5,7 @@
 
 body{
   overflow: hidden;
-  }
+}
 header{
   width: 100%;
   height: 50px;
@@ -32,23 +32,20 @@ footer{
 }
 .manequimM{
   position: relative;
-  left: 963px;
-  top: -1366px;
+  left: 1051px;
+  top: -1393px;
   height: 527px;
 }
 
-
-
-
 div {
-  width: 521px;
+  width: 565px;
   height: 497px;
   border: 2px solid #233219;
   position: relative;
 }
 
 video {
-  width: 521px;
+  width: 565px;
   height: 497px;
   object-fit: cover;
 }
@@ -84,9 +81,9 @@ video {
   --input-hovered-color: #ffffff1f;
   position: relative;
   width: var(--width-of-input);
- }
+}
  /* styling of Input */
- .input {
+.input {
   color: #000000;
   font-size: 0.9rem;
   background-color: transparent;
@@ -96,9 +93,12 @@ video {
   padding-block: 0.7em;
   border: none;
   border-bottom: var(--border-height) solid var(--border-before-color);
- }
+  position: relative;
+  top: -476px;
+  left: 600px;
+}
  /* styling of animated border */
- .input-border {
+.input-border {
   position: absolute;
   background: var(--border-after-color);
   width: 0%;
@@ -106,28 +106,27 @@ video {
   bottom: 0;
   left: 0;
   transition: 0.3s;
- }
+}
  /* Hover on Input */
- input:hover {
+input:hover {
   background: var(--input-hovered-color);
- }
- 
- input:focus {
+}
+
+input:focus {
   outline: none;
- }
+}
  /* here is code of animated border */
- input:focus ~ .input-border {
+input:focus ~ .input-border {
   width: 100%;
- }
+}
 
 #calcula{
   position: relative;
-  top: -575px;
-  left: 762px;
-  height: 29px;
-  width: 72px;
+  top: -516px;
+  left: 763px;
+  height: 40px;
+  width: 136px;
 }
-
 
 p{
   position: relative;
@@ -144,6 +143,46 @@ p{
 h1{
   position: relative;
   left: 539px;
-  top: -1065px;
+  top: -1003px;
   font-size: smaller;
+}
+
+ol{
+  position: relative;
+    color: black;
+    top: -999px;
+    left: 545px;
+    font-size: small;
+}
+
+.entrar{
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.entrar:hover{
+  background-color: #3c4228;
+  box-shadow: 0px 15px 20px #95a85c;
+  color: #fff;
+  transform: translateY(-7px);
+}
+.entrar:active{
+  transform: translateY(-1px);
+}
+
+#tamanhos{
+  position: relative;
+  top: -1171px;
+  left: 560px;
 }
