--- a/experimenteF.css
+++ b/experimenteF.css
@@ -30,11 +30,11 @@
     left: 612px;
     top: 1px;
   }
-  .manequimM{
+  .manequimF{
     position: relative;
     left: 1051px;
-    top: -1393px;
-    height: 527px;
+    top: -1380px;
+    height: 508px;
   }
   
   div {
