--- a/experimenteF.css
+++ b/experimenteF.css
@@ -186,3 +186,32 @@
     top: -1171px;
     left: 601px;
   }
+
+  video{
+    height: 500px!important;
+    width: 565px!important;
+    position: relative!important;
+    z-index: 99!important;
+    top: -357px!important;
+    left:2px!important;
+  }
+  
+  a-scene{
+    height: 500px!important;
+    width: 565px!important;
+    position: relative!important;
+    z-index: 99999!important;
+    top: 0px!important;
+    left:0px!important;
+  }
+  
+  #vid{
+    position: relative;
+  }
+  
+  body{
+    width: 100%!important;
+    height: 430px!important;
+    margin-left: 0!important;
+    margin-top: 0!important;
+  }
